# circe_acwapower

./: README.md
circe-acwapower/: .funcignore  .gitignore  README.md  acwa-0.1.0-py3-none-any.whl  host.json  mkdocs.yml  pyproject.toml  requirements.txt  wind_operational_data-0.5.9-py3-none-any.whl
circe-acwapower/azure_availabilities/: __init__.py  function.json
circe-acwapower/azure_collect/: __init__.py  function.json
circe-acwapower/azure_fit/: __init__.py  function.json
circe-acwapower/azure_fit_timer/: __init__.py  function.json
circe-acwapower/azure_operational/: __init__.py
circe-acwapower/azure_power_curves/: __init__.py
circe-acwapower/azure_raw_dynamic_10min/: __init__.py
circe-acwapower/azure_raw_dynamic_alarms/: __init__.py  function.json
circe-acwapower/azure_status/: __init__.py
circe-acwapower/config/: main.yml
circe-acwapower/docs/: alarms_treatment.md  data_collection.md  data_mockup.md  full_scheme.md  full_scheme_2.md  general_structure.md  metadata_upload.md  power_curves.md  reliability.md  technical_specifications.md
circe-acwapower/queries/azure/: aggregate_energy.sql  aggregate_energy_dev.sql  delete_input_10min_Azerbaijan.sql  delete_input_10min_Khalladi.sql  delete_input_1min_Azerbaijan.sql  delete_input_1min_Khalladi.sql  delete_input_recent_alarms.sql  delete_last_10min.sql  delete_last_10min_basic.sql  delete_last_10min_corrections.sql  delete_last_1min.sql  delete_last_1min_corrections.sql  delete_last_alarms.sql  delete_last_alarms_basic.sql  (+91 more)
circe-acwapower/src/: function_creator.py  update_local.py
(+488 files in other folders)
